# Dell

./: .gitignore  README.md  TODO.md  main.py  pipeline_output.txt  pipeline_output2.txt  pyproject.toml  requirements.txt  streamlit_app.py
api/: app.py
notebooks/: Calibration_weather_param_version2.ipynb  calibration_weather_param.ipynb  um6p_weather_pipeline.ipynb  um6p_weather_pipeline_colab.ipynb
predictions/: predictions_R02_2024.csv  predictions_R03_2022.csv  predictions_R03_2024.csv  predictions_R07_2022.csv  predictions_R07_2024.csv  predictions_R23_2024.csv  predictions_R24_2022.csv  predictions_R24_2024.csv  predictions_R24_2026.csv  predictions_R24_2027.csv
reports/: calibration_monthly.csv  calibration_precipitation_pivot.csv  calibration_table.csv  calibration_temperature_pivot.csv  model_comparison.csv
src/weather_ml_project/: __init__.py  config.py  pipeline.py
src/weather_ml_project/data/: calibrate.py  fetch_openmeteo.py  load_data.py  preprocess.py
src/weather_ml_project/data/APIS/: calibration.csv  calibration_era5.csv  calibration_nasa.csv  calibration_openmeteo.csv  extraction_gee_20260423_154703.csv
src/weather_ml_project/data/raw/Données Météo/00001A3F • ksar El Kebir/: 2020.xls  2021.xls  GPS.txt
src/weather_ml_project/data/raw/Données Météo/00001A46 • DAR ELGUEDDARI/: 2017.xls  GPS.txt
src/weather_ml_project/features/: build_features.py  feature_groups.py
src/weather_ml_project/reports/: calibration_report.py
src/weather_ml_project/utils/: helpers.py
src/weather_ml_project/visualization/: plots.py
(+50 files in other folders)
