[tool.poetry]
name = "um6p_weather_ml_project"
version = "0.1.0"
description = "Pipeline météo pour calibration ERA5/Open-Meteo/NASA POWER avec données terrain et prédictions horaires."
authors = ["Mohammed VI Polytechnic University <contact@um6p.edu.ma>"]
readme = "README.md"
packages = [{include = "weather_ml_project", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
numpy = "^2.0"
scikit-learn = "^1.3"
xgboost = "^2.0"
optuna = "^3.6"
shap = "^0.45"
matplotlib = "^3.8"
seaborn = "^0.12"
joblib = "^1.3"
pyyaml = "^6.0"
streamlit = "^1.24"
openpyxl = "^3.1"
xlrd = "^2.0"
python-dateutil = "^2.8"
scipy = "^1.11"
fastapi = "^0.104"
pydantic = "^2.5"
uvicorn = "^0.24"

[tool.poetry.dev-dependencies]
black = "^24.0"
pytest = "^8.3"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
